# notification-service

./: .dockerignore  .env-template  .env-template.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.dev  README.md  docker-compose.bench.yml  docker-compose.test.yml  docker-compose.yml  perf.data  perf.data.old
.github/workflows/: e2e_test.yml  integration_test.yml  pull_branch.yml  push_branch.yml  unit_test.yml
benches/: benchmark_test.rs  hashmap_benchmark.rs
cargo-timings/: codegen_1.html  codegen_1_lto_fat.html  codegen_1_lto_thin.html  default.html  opt-level_s.html  opt-level_z.html
db/: core.sql
hashmap_benchmark_report/hashmap_insertion/100/report/: index.html
hashmap_benchmark_report/hashmap_insertion/1000/report/: index.html
hashmap_benchmark_report/hashmap_insertion/10000/report/: index.html
hashmap_benchmark_report/hashmap_insertion/ahash_hashmap/report/: index.html
hashmap_benchmark_report/hashmap_insertion/fnv_hashmap/report/: index.html
hashmap_benchmark_report/hashmap_insertion/fx_hashmap/report/: index.html
hashmap_benchmark_report/hashmap_insertion/report/: index.html
hashmap_benchmark_report/hashmap_insertion/std_hashmap/report/: index.html
hashmap_benchmark_report/hashmap_iteration/100/report/: index.html
hashmap_benchmark_report/hashmap_iteration/1000/report/: index.html
hashmap_benchmark_report/hashmap_iteration/report/: index.html
hashmap_benchmark_report/hashmap_lookup/report/: index.html
hashmap_benchmark_report/report/: index.html
llvm_cov_report/: index.html
profiling/e2e/: perf_report.txt
profiling/e2e/manuel_testing/: perf_report.txt
scripts/: integration_test.sh
src/: app.rs  lib.rs  main.rs
src/db/: client.rs
src/db/queries/events/: create.rs  (+1 more)
src/email/: client.rs
src/error/: types.rs
src/middlewares/: mod.rs  verify_shopify_origin.rs
src/routes/: health_check.rs  mod.rs
src/services/: database.rs  document.rs  email.rs  mod.rs  template.rs
src/services/email/: client.rs  mod.rs
src/services/queries/: email_template.rs  event.rs  mod.rs  partial.rs  template.rs
src/services/template/: client.rs  mod.rs
src/utils/: email.rs  mod.rs
src/utils/shopify/: mod.rs  webhook_types.rs
tests/: route_handler.rs
tests/e2e/: system_test.rs
tests/integration/: route_handler.rs
(+221 files in other folders)
