[package]
name = "notification-service"
version = "0.1.0"
authors = ["Benjamin Sommervoll <puixdk@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["macros","rt-multi-thread"] }
tower = "0.5.0"
thiserror = "1.0.68"
dotenv = "0.15.0"
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
serde_json = "1.0.132"
lettre = { version = "0.11.10", features = ["tokio1-native-tls"] }