[package]
name = "notification_service"
version = "0.1.0"
authors = ["Benjamin Sommervoll <puixdk@gmail.com>"]
edition = "2021"

[lib]
name = "notification_service"
path = "src/lib.rs"

[[bin]]
name = "notification_service"
path = "src/main.rs"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["macros","rt-multi-thread"] }
tower = "0.5.0"
thiserror = "1.0.68"
dotenv = "0.15.0"
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
serde_json = "1.0.132"
lettre = { version = "0.11.10", features = ["tokio1-native-tls", "builder"] }
handlebars = "6.2.0"
serde = { version = "1.0.215", features = ["derive"] }
printpdf = { git = "https://github.com/fschutt/printpdf", rev = "58c878ad2f3c97b74be5884f06185d3db3ab1e16" }
async-trait = "0.1.83"

[dev-dependencies]
lazy_static = "1.5.0"
criterion = "0.5.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
reqwest = { version = "0.12.9", features = ["json"] }

[[bench]]
name = "benchmark_test"
harness = false

[profile.e2e]
inherits = "release"
debug-assertions = true

[profile.release]
codegen-units = 1
lto = "fat"